--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: forgottenlandapp_etl
 description: Forgotten Land App ETL
-version: 25.09.27+1
+version: 25.10.01+1
 publish_to: none
 
 environment:
@@ -23,10 +23,11 @@ dependencies:
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   shelf_cors_headers: ^0.1.5
+  dotenv: ^4.2.0
 
 dev_dependencies:
   build_runner: ^2.3.2
-  build_web_compilers: ^3.2.7
-  http: ^0.13.0
-  lints: ^4.0.0
+  build_web_compilers: ^4.1.1
+  http: ^1.5.0
+  lints: ^5.1.1
   test: ^1.15.0
